--- a/docs/config/mgma_env.yaml
+++ b/docs/config/mgma_env.yaml
@@ -16,3 +16,4 @@ dependencies:
     - torchvision ## if you want to use pytorch as well
     - matplotlib ## if you want to plot your data
     - plotly ## if you want to plot your data
+    - networkx[default]
