--- a/docs/config/mgma_env.yaml
+++ b/docs/config/mgma_env.yaml
@@ -16,4 +16,6 @@ dependencies:
     - torchvision ## if you want to use pytorch as well
     - matplotlib ## if you want to plot your data
     - plotly ## if you want to plot your data
+    - snap
     - networkx[default]
+    - mayavi
