--- a/docs/config/mgma_env.yaml
+++ b/docs/config/mgma_env.yaml
@@ -18,6 +18,6 @@ dependencies:
     - plotly ## if you want to plot your data
     - snap
     - networkx[default]
-    - mayavi
+    # - mayavi
     - dash
     - jupyter-dash
